fixed photo sizing on safari

--- a/react-vite/src/components/Beer/Beer.css
+++ b/react-vite/src/components/Beer/Beer.css
@@ -357,6 +357,7 @@ h4 {
     bottom: 0;
     left: 0;
     right: 0;
+    height: 85%;
 
     display: grid;
     grid-template-columns: 32% 32% 32%;
